--- a/hello-world-java/Dockerfile
+++ b/hello-world-java/Dockerfile
@@ -4,8 +4,8 @@ FROM openjdk:17-jdk-alpine
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Copy the compiled Java class file into the container
+# Copy the jar file into the container
 COPY target/myHelloWorld-1.0-SNAPSHOT.jar .
 
 # Run the Java application when the container starts
-CMD ["java", "-jar", "myHelloWorld-1.0-SNAPSHOT.jar"]
+CMD ["java", "-jar", "myHelloWorld-1.0-SNAPSHOT.jar"]	
